<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ETA</string>
    <string name="action_settings">Settings</string>
    <string name="mainTitle">Create your trip!</string>
    <string name="createButton">Create trip</string>
    <string name="viewCurrentButton">View current trip</string>
    <string name="viewLocationButton">View friend location</string>
    <string name="viewButton">View trips</string>

    <!--Create Trip Page-->
    <string name="trip_name">Trip name</string>
    <string name="trip_location">location</string>
    <string name="trip_date">Date</string>
    <string name="trip_time">time</string>
    <string name="add_friend">Add Friend</string>
    <string name="friend_name">name</string>
    <string name="friend_location">location</string>
    <string name="friend_phone">phone number</string>
    <string name="create_trip">Create</string>
    <string name="cancel_trip">Cancel</string>

    <!--View Trip Page-->
    <string name="viewTitle">Trip</string>
    <string name="vTrip_name">Trip name</string>
    <string name="vTrip_location">location</string>
    <string name="vTrip_time">time</string>
    <string name="fTitle">Friend</string>
    <string name="vFriend_name">name</string>
    <string name="vFriend_location">location</string>
    <string name="vFriend_phone">phone number</string>
    <string name="vBack">Back</string>

    <!--View Trip History Page-->
    <string name="History_view">View</string>
    <string name="History_trip">Trip Name:</string>

    <!--View Friend Item Page-->
    <string name="iFriend_name">Name</string>
    <string name="iFriend_phone">Phone</string>

    <!--View all Page-->
    <string name="view_all_unstarted">View UnStarted Trips</string>
    <string name="view_all_history">View History Trips</string>

</resources>
